--- a/djd/springMytatis01/pom.xml
+++ b/djd/springMytatis01/pom.xml
@@ -34,6 +34,11 @@
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
+      <artifactId>spring-core</artifactId>
+      <version>5.2.5.RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
       <artifactId>spring-aspects</artifactId>
       <version>5.1.10.RELEASE</version>
     </dependency>
@@ -68,7 +73,7 @@
     <dependency>
       <groupId>com.alibaba</groupId>
       <artifactId>druid</artifactId>
-      <version>1.1.12</version>
+      <version>1.0.15</version>
     </dependency>
   </dependencies>
 
