--- a/djd/springMytatis02/pom.xml
+++ b/djd/springMytatis02/pom.xml
@@ -88,6 +88,11 @@
       <version>2.2.1-b03</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+      <version>5.2.5.RELEASE</version>
+    </dependency>
   </dependencies>
 
   <build>
